--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-white">
-
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="index.html">
             <img src="Img/SobaLogo.png" width="30" height="30" class="d-inline-block align-top" alt="Potos Tours Logo Image">Villa Koukoudis
         </a>
