--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/toastr.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico">
     <link rel="alternate" href="http://villakoukoudis.com/" hreflang="x-default" />
@@ -34,7 +35,7 @@
             "telephone": ["+302593053013", "+306955613371"],
             "sameAs": [
                 "https://www.facebook.com/VillaKoukoudis",
-                "https://plus.google.com/communities/115725383312694736421"
+                "https://plus.google.com/u/0/b/116867169178808977668/?_ga=2.246910916.1902793546.1515490354-460452581.1510253241"
             ],
             "geo": {
                 "@type": "GeoCoordinates",
@@ -61,7 +62,7 @@
                 "image": "http://villakoukoudis/img/sobalogo.png"
             }
     </script>
-    <script>
+    <!-- <script>
         function displayNextImage() {
             x = (x === images.length - 1) ? 0 : x + 1;
             document.getElementById("img1").src = images[x];
@@ -73,7 +74,7 @@
         }
 
         function startTimer() {
-            setInterval(displayNextImage, 3000);
+            setInterval(displayNextImage, 5000);
         }
 
         var images = [],
@@ -81,10 +82,10 @@
         images[0] = "img/aliki.png";
         images[1] = "img/giola.png";
         images[2] = "img/katar.png";
-    </script>
+    </script> -->
 </head>
 
-<body >
+<body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="index.html#villakoukoudis-potos-thassos-home-section">
             <img src="Img/SobaLogo.png" width="30" height="30" class="d-inline-block align-top" style="margin-right:10px" alt="Villa Koukoudis Potos Thassos Logo Image">Villa Koukoudis
@@ -128,7 +129,8 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://plus.google.com/communities/115725383312694736421" target="_blank">
+                    <a class="nav-link" href="https://plus.google.com/u/0/b/116867169178808977668/?_ga=2.246910916.1902793546.1515490354-460452581.1510253241"
+                        target="_blank">
                         <i class="fa fa-google-plus"></i>
                     </a>
                 </li>
@@ -141,7 +143,7 @@
         data-image-src="img/soba1300.png">
         <div class="container home-section-padding">
             <div class="row">
-                <div class="col-lg-6 col-md-6">
+                <div class="col-lg-4 col-md-4">
                     <h1>
                         Villa Koukoudis in Potos Thassos
                     </h1>
@@ -196,20 +198,63 @@
                         </div>
                     </div> -->
                 </div>
-                <div class="col-lg-3 col-md-3">
-                    <div class="d-flex flex-row">
-                        <img id="img1" class="img-fluid" style="height:150px;" src="img/aliki.png" alt="Aliki beach in Thassos">
-                    </div>
-                    <div class="d-flex flex-row">
-                        <img id="img2" class="img-fluid" style="height:150px;" src="img/giola.png" alt="Giola Natural pool in Thassos">
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3">
-                    <div class="d-flex flex-row">
-                        <img id="img3" class="img-fluid" style="height:150px;" src="img/katar.png" alt="Waterfall in Thassos">
-                    </div>
-                    <div class="d-flex flex-row">
-                        <img id="img4" class="img-fluid" style="height:150px;" src="img/paradise.png" alt="Paradise Beach in Thassos">
+
+                <div class="col-lg-8 col-md-8">
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="first-slide" src="img/katar.png" alt="First slide">
+                                <div class="container">
+                                    <div class="carousel-caption text-left">
+                                        <h1>Maries waterfall.</h1>
+                                        <p>Description of Maries waterfall in Thassos.
+                                        </p>
+                                        <p>
+                                            <a class="btn btn-lg btn-primary" href="#" role="button">Request quote</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="second-slide" src="img/giola.png" alt="Second slide">
+                                <div class="container">
+                                    <div class="carousel-caption">
+                                        <h1>Giola Thassos.</h1>
+                                        <p>Description for giola natural pool.
+                                        </p>
+                                        <p>
+                                            <a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="third-slide" src="img/aliki.png" alt="Third slide">
+                                <div class="container">
+                                    <div class="carousel-caption text-right">
+                                        <h1>Aliki beach.</h1>
+                                        <p>Description for Aliki beach Thassos.
+                                        </p>
+                                        <p>
+                                            <a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -369,14 +414,14 @@
                             Boat trips, Fish trips, cruises
                         </div>
                     </div>
-                    <div class="d-flex flex-row">
+                    <!-- <div class="d-flex flex-row">
                         <div class="p-2 align-self-start">
                             <i class="fa fa-check"></i>
                         </div>
                         <div class="p-2 align-self-end">
                             <strong>No extra cost for you.</strong>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-6">
                     <img src="img/parasail.jpg" alt="Parasailing in Potos Thassos" class="img-fluid mb-3 rounded-circle">
@@ -473,26 +518,106 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Your Requirements in Accommodation</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Request a Quote</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form>
-                        <div class="form-group">
-                            <label for="recipient-name" class="col-form-label">Recipient:</label>
-                            <input type="text" class="form-control" id="recipient-name">
+                    <form id="requirementsModalForm">
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="inputEmail4">Email</label>
+                                <input type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
+                                <div class="invalid-feedback">
+                                    Please enter a valid Email.
+                                </div>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="customerName">Name</label>
+                                <input type="text" class="form-control " id="customerName" placeholder="Name" required>
+                                <div class="invalid-feedback">
+                                    Please enter your Name.
+                                </div>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label for="message-text" class="col-form-label">Message:</label>
-                            <textarea class="form-control" id="message-text"></textarea>
+                        <div class="form-row">
+                            <div class="form-group col-md-2">
+                                <label for="inputAdults">Adults</label>
+                                <input type="number" class="form-control" id="inputAdults">
+                                <div class="invalid-feedback">
+                                    Select Adults.
+                                </div>
+                            </div>
+                            <div class="form-group col-md-2">
+                                <label for="inputChildren">Children</label>
+                                <input type="number" class="form-control" id="inputChildren">
+                                <div class="invalid-feedback">
+                                    Select Children.
+                                </div>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="inputCity">City</label>
+                                <input type="text" class="form-control" id="inputCity">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="inputCountry">Country</label>
+                                <select id="inputCountry" class="form-control" required>
+                                    <option value="" selected>Choose...</option>
+                                    <option value="GR">Greece</option>
+                                    <option value="SRB">Serbia</option>
+                                    <option value="RO">Romania</option>
+                                    <option value="DE">Germany</option>
+                                    <option value="CH">Check</option>
+                                    <option value="FYROM">FYROM</option>
+                                    <option value="SL">Slovakia</option>
+                                    <option value="RUS">Rushia</option>
+                                </select>
+                                <div class="invalid-feedback">
+                                    Please select your Country.
+                                </div>
+                            </div>
+
+                        </div>
+
+
+                        <div class="form-row">
+
+                            <div class="form-group col-md-4">
+                                <label for="roomType">Room Type</label>
+                                <select id="roomType" class="form-control" required>
+                                    <option value="" selected>Choose...</option>
+                                    <option value="ST2">Studio double (2 Beds)</option>
+                                    <option value="ST3">Studio triple (3 Beds)</option>
+                                    <option value="APP4">Appartment (4 Beds)</option>
+                                    <option value="APP5">Appartment (5 Beds)</option>
+
+                                </select>
+                                <div class="invalid-feedback">
+                                    Please select a Room Type.
+                                </div>
+                            </div>
+                            <div class="form-group col-md-4" id="dateFromDiv">
+                                <label for="dateFrom">From Date</label>
+                                <input type="date" class="form-control" id="dateFrom" placeholder="From Date">
+                                <div class="invalid-feedback">
+                                    Date range error.
+                                </div>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="dateTo">To Date</label>
+                                <input type="date" class="form-control" id="dateTo" placeholder="To Date">
+                                <!-- <span ></span> -->
+                                <div class="invalid-feedback">
+                                    Date range error.
+                                </div>
+                            </div>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button id="requirementsModalSaveButton" type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </div>
@@ -503,6 +628,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/parallax.js"></script>
     <script src="js/scrollreveal.js"></script>
+    <script src="js/toastr.min.js"></script>
     <script src="js/site.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112080655-1"></script>
@@ -519,6 +645,53 @@
 
     <script>
         $('.parallax-window').parallax();
+    </script>
+    <script>
+        function isTextFieldEmpty(fieldId) {
+            var tField = $("#" + fieldId);
+            if (tField.val() == null || tField.val() == "") {
+                var div = tField.closest("div");
+                div.addClass("has-danger");
+                return true;
+            } else {
+                var div = tField.closest("div");
+                div.removeClass("has-danger");
+                return false;
+            }
+        }
+
+        $('#requirementsModalSaveButton').on('click', function () {
+            var myForm = document.getElementById('requirementsModalForm');
+            var dateFrom = document.getElementById('dateFrom');
+            var dateTo = document.getElementById('dateTo');
+            var dateFromDiv = document.getElementById('dateFromDiv');
+            isTextFieldEmpty('customerName');
+            console.log("date From " + dateFrom.value);
+            console.log("date To " + dateTo.value);
+            //console.log("validity of date to " + dateTo.validity.checkValidity());
+            if (dateFrom.value > dateTo.value) {
+                dateFromDiv.classList.add("has-error");
+                console.log("date from is graiter then date to");
+                // dateFrom.classList.add('invalid');
+                // dateTo.classList.add('invalid');
+                // dateFrom.validity.customError=true;
+                // dateTo.validity.customError=true;
+
+
+            }
+            if (myForm.checkValidity() === false) {
+                toastr.error('Have fun storming the castle!', 'Miracle Max Says', {
+                    progressBar: true,
+                    positionClass: "toast-bottom-center"
+                });
+            } else {
+                toastr.success('Have fun storming the castle!', 'Miracle Max Says', {
+                    progressBar: true,
+                    positionClass: "toast-bottom-center"
+                });
+            }
+            myForm.classList.add('was-validated');
+        });
     </script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -554,8 +727,8 @@
     <script type="text/javascript">
         var markers = [{
             'title': 'Villa Koukoudis',
-            'lat': '40.6114292918345',
-            'lng': '24.6055099393095',
+            'lat': '40.611698',
+            'lng': '24.607855',
             'description': 'Villa Koukoudis description'
         }];
         window.onload = function () {
@@ -565,7 +738,7 @@
                 mapTypeId: google.maps.MapTypeId.ROADMAP
             };
             //A solution for changing images 
-            setInterval(displayNextImage, 3000);
+            // setInterval(displayNextImage, 3000);
 
             var infoWindow = new google.maps.InfoWindow();
             var map = new google.maps.Map(document.getElementById("dvMap"), mapOptions);
@@ -670,7 +843,7 @@
             //origin: 'bottom'
         });
     </script>
-   
+
 </body>
 
 </html>
