--- a/src/index.html
+++ b/src/index.html
@@ -205,10 +205,11 @@
                             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                             <li data-target="#myCarousel" data-slide-to="1"></li>
                             <li data-target="#myCarousel" data-slide-to="2"></li>
+                            <li data-target="#myCarousel" data-slide-to="3"></li>
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="first-slide" src="img/katar.png" alt="First slide">
+                                <img class="first-slide" src="img/carousel/katarachtes.jpg" alt="First slide">
                                 <div class="container">
                                     <div class="carousel-caption text-left">
                                         <h1>Maries waterfall.</h1>
@@ -221,7 +222,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="second-slide" src="img/giola.png" alt="Second slide">
+                                <img class="second-slide" src="img/carousel/giola.jpg" alt="Second slide">
                                 <div class="container">
                                     <div class="carousel-caption">
                                         <h1>Giola Thassos.</h1>
@@ -234,7 +235,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="third-slide" src="img/aliki.png" alt="Third slide">
+                                <img class="third-slide" src="img/carousel/aliki.jpg" alt="Third slide">
                                 <div class="container">
                                     <div class="carousel-caption text-right">
                                         <h1>Aliki beach.</h1>
@@ -242,6 +243,19 @@
                                         </p>
                                         <p>
                                             <a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="third-slide" src="img/carousel/Potos.tours.jpg" alt="Potos tours the travel agency in Potos Thassos">
+                                <div class="container">
+                                    <div class="carousel-caption text-right">
+                                        <h1>Potos.Tours</h1>
+                                        <p>Potos tours is your vacation partner in Potos.
+                                        </p>
+                                        <p>
+                                            <a class="btn btn-lg btn-primary" href="http://potos.tours" target="_blank" role="button">Visit site</a>
                                         </p>
                                     </div>
                                 </div>
@@ -370,7 +384,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h3>Live Your Passion</h3>
-                    <p>We make all the necessary arrangements. </p>
+                    <!-- <p>We make all the necessary arrangements. </p> -->
                     <div class="d-flex flex-row">
                         <div class="p-2 align-self-start">
                             <i class="fa fa-check"></i>
@@ -527,8 +541,8 @@
                     <form id="requirementsModalForm">
                         <div class="form-row">
                             <div class="form-group col-md-6">
-                                <label for="inputEmail4">Email</label>
-                                <input type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
+                                <label for="inputEmail">Email</label>
+                                <input type="email" class="form-control" id="inputEmail" placeholder="Email" required>
                                 <div class="invalid-feedback">
                                     Please enter a valid Email.
                                 </div>
@@ -544,14 +558,14 @@
                         <div class="form-row">
                             <div class="form-group col-md-2">
                                 <label for="inputAdults">Adults</label>
-                                <input type="number" class="form-control" id="inputAdults">
+                                <input type="number" class="form-control" id="inputAdults" required>
                                 <div class="invalid-feedback">
                                     Select Adults.
                                 </div>
                             </div>
                             <div class="form-group col-md-2">
                                 <label for="inputChildren">Children</label>
-                                <input type="number" class="form-control" id="inputChildren">
+                                <input type="number" class="form-control" id="inputChildren" required>
                                 <div class="invalid-feedback">
                                     Select Children.
                                 </div>
@@ -579,10 +593,7 @@
                             </div>
 
                         </div>
-
-
                         <div class="form-row">
-
                             <div class="form-group col-md-4">
                                 <label for="roomType">Room Type</label>
                                 <select id="roomType" class="form-control" required>
@@ -599,15 +610,14 @@
                             </div>
                             <div class="form-group col-md-4" id="dateFromDiv">
                                 <label for="dateFrom">From Date</label>
-                                <input type="date" class="form-control" id="dateFrom" placeholder="From Date">
+                                <input type="date" class="form-control" id="dateFrom" placeholder="From Date" required>
                                 <div class="invalid-feedback">
                                     Date range error.
                                 </div>
                             </div>
                             <div class="form-group col-md-4">
                                 <label for="dateTo">To Date</label>
-                                <input type="date" class="form-control" id="dateTo" placeholder="To Date">
-                                <!-- <span ></span> -->
+                                <input type="date" class="form-control" id="dateTo" placeholder="To Date" required>
                                 <div class="invalid-feedback">
                                     Date range error.
                                 </div>
@@ -629,6 +639,7 @@
     <script src="js/parallax.js"></script>
     <script src="js/scrollreveal.js"></script>
     <script src="js/toastr.min.js"></script>
+    <!-- <script src="js/smtp.js"></script> -->
     <script src="js/site.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112080655-1"></script>
@@ -648,14 +659,15 @@
     </script>
     <script>
         function isTextFieldEmpty(fieldId) {
-            var tField = $("#" + fieldId);
-            if (tField.val() == null || tField.val() == "") {
-                var div = tField.closest("div");
-                div.addClass("has-danger");
+            var tField = document.getElementById(fieldId);
+            var $tField = $("#" + fieldId);
+            if ($tField.val() == null || $tField.val() == "") {
+                // $tField.addClass("form-control-danger");
+                tField.setCustomValidity('Error Message');
                 return true;
             } else {
-                var div = tField.closest("div");
-                div.removeClass("has-danger");
+                //$tField.removeClass("form-control-danger")
+                tField.setCustomValidity('');
                 return false;
             }
         }
@@ -664,28 +676,45 @@
             var myForm = document.getElementById('requirementsModalForm');
             var dateFrom = document.getElementById('dateFrom');
             var dateTo = document.getElementById('dateTo');
-            var dateFromDiv = document.getElementById('dateFromDiv');
-            isTextFieldEmpty('customerName');
-            console.log("date From " + dateFrom.value);
-            console.log("date To " + dateTo.value);
-            //console.log("validity of date to " + dateTo.validity.checkValidity());
+            var eMail = document.getElementById('inputEmail');
+            var customerName = document.getElementById('customerName');
+            var inputAdults = document.getElementById('inputAdults');
+            var inputChildren = document.getElementById('inputChildren');
+            var inputCity = document.getElementById('inputCity');
+            var inputCountry = document.getElementById('inputCountry');
+            var roomType = document.getElementById('roomType');
+
+
             if (dateFrom.value > dateTo.value) {
-                dateFromDiv.classList.add("has-error");
+
                 console.log("date from is graiter then date to");
-                // dateFrom.classList.add('invalid');
-                // dateTo.classList.add('invalid');
-                // dateFrom.validity.customError=true;
-                // dateTo.validity.customError=true;
-
-
             }
             if (myForm.checkValidity() === false) {
-                toastr.error('Have fun storming the castle!', 'Miracle Max Says', {
+                toastr.error('Please correct all the errors!', 'Villa Koukoudis', {
                     progressBar: true,
                     positionClass: "toast-bottom-center"
                 });
             } else {
-                toastr.success('Have fun storming the castle!', 'Miracle Max Says', {
+                //send email with request data
+                var msg = customerName.value + '|' +
+                    inputAdults.value + '|' + inputChildren.value + '|' +
+                    inputCountry.value + '|' + roomType.value + '|' +
+                    dateFrom.value + '|' + dateTo.value;
+                var uri = 'http://villaapp.villakoukoudis.com?' + 'eMail=' + eMail.value + '&msg=' + msg;
+                var finalUri = encodeURI(uri);
+                console.log(finalUri);
+                $.get(finalUri)
+                    .done(function () {
+                        console.log("second success");
+                    })
+                    .fail(function () {
+                        console.log("error");
+                    })
+                    .always(function () {
+                        console.log("finished");
+                    });
+                $('#fillRequirementsModal').modal('hide')
+                toastr.success('Thank you for your request!', 'Villa Koukoudis', {
                     progressBar: true,
                     positionClass: "toast-bottom-center"
                 });
@@ -788,45 +817,45 @@
             duration: 500,
             origin: 'bottom'
         });
-        sr.reveal('#meetisland1', {
-            duration: 1000,
-            delay: 400,
-            origin: 'left'
-        });
-        sr.reveal('#meetisland2', {
-            duration: 1000,
-            delay: 600,
-            origin: 'left'
-        });
-        sr.reveal('#meetisland3', {
-            duration: 1000,
-            delay: 600,
-            origin: 'left'
-        });
-        sr.reveal('#img1', {
-            duration: 1000,
-            delay: 1200,
-            distance: '300px',
-            origin: 'top'
-        });
-        sr.reveal('#img2', {
-            duration: 1000,
-            delay: 1600,
-            distance: '300px',
-            origin: 'bottom'
-        });
-        sr.reveal('#img3', {
-            duration: 1000,
-            delay: 2000,
-            distance: '300px',
-            origin: 'top'
-        });
-        sr.reveal('#img4', {
-            duration: 1000,
-            delay: 2400,
-            distance: '300px',
-            origin: 'bottom'
-        });
+        // sr.reveal('#meetisland1', {
+        //     duration: 1000,
+        //     delay: 400,
+        //     origin: 'left'
+        // });
+        // sr.reveal('#meetisland2', {
+        //     duration: 1000,
+        //     delay: 600,
+        //     origin: 'left'
+        // });
+        // sr.reveal('#meetisland3', {
+        //     duration: 1000,
+        //     delay: 600,
+        //     origin: 'left'
+        // });
+        // sr.reveal('#img1', {
+        //     duration: 1000,
+        //     delay: 1200,
+        //     distance: '300px',
+        //     origin: 'top'
+        // });
+        // sr.reveal('#img2', {
+        //     duration: 1000,
+        //     delay: 1600,
+        //     distance: '300px',
+        //     origin: 'bottom'
+        // });
+        // sr.reveal('#img3', {
+        //     duration: 1000,
+        //     delay: 2000,
+        //     distance: '300px',
+        //     origin: 'top'
+        // });
+        // sr.reveal('#img4', {
+        //     duration: 1000,
+        //     delay: 2400,
+        //     distance: '300px',
+        //     origin: 'bottom'
+        // });
         //Accommodation section
         sr.reveal('#accommodationImage', {
             duration: 3000
@@ -837,7 +866,7 @@
         });
         sr.reveal('#accommodationDetails', {
             duration: 3000,
-            delay: 2000
+            delay: 1000
             //distance: '300px',
             //opacity:0
             //origin: 'bottom'
