Small changes and corrections in reveal

--- a/src/indexRolling1.html
+++ b/src/indexRolling1.html
@@ -141,7 +141,7 @@
         data-image-src="img/soba1300.png">
         <div class="container home-section-padding">
             <div class="row">
-                <div class="col-lg-4 col-md-4">
+                <div class="col-lg-8 col-md-8">
                     <h1>
                         Villa Koukoudis in Potos Thassos
                     </h1>
@@ -187,23 +187,15 @@
                         </div>
                     </div>
 
-                    <!-- <div id="meetisland3" class="d-flex flex-row">
-                        <div class="p-2 align-self-start">
-                            <i class="fa fa-check"></i>
-                        </div>
-                        <div class="p-2 align-self-end">
-                            <strong>FREE of charge for you</strong>
-                        </div>
-                    </div> -->
                 </div>
-                <div class="col-lg-8 col-md-8">
+                <div class="col-lg-4 col-md-4">
                     <div class="card">
                         <div class="card-body">
-                            <img class="card-img-overlay " src="img/giola.png" alt="Second slide">
+                            <img class="card-img-overlay img-fluid" src="img/carousel/Potos.tours.jpg" alt="Second slide">
 
 
-                            <h1 class="card-title" >Another example headline.</h1>
-                            <p class="card-text" >Cras justo odio, dapibus ac facilisis in, egestas eget quam. </p>
+                            <h5 class="card-title" >Another example headline.</h5>
+                            <p class="card-text" >Cras justo odio, dapibus ac facilisis in  </p>
                            
                                 <a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a>
                             
