--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,7 @@
         data-image-src="img/soba1300.png">
         <div class="container home-section-padding">
             <div class="row">
-                <div class="col-lg-4 col-md-4">
+                <div class="col-lg-6 col-md-6">
                     <h1>
                         Villa Koukoudis in Potos Thassos
                     </h1>
@@ -189,88 +189,38 @@
                         </div>
                     </div>
 
-                    <!-- <div id="meetisland3" class="d-flex flex-row">
-                        <div class="p-2 align-self-start">
-                            <i class="fa fa-check"></i>
-                        </div>
-                        <div class="p-2 align-self-end">
-                            <strong>FREE of charge for you</strong>
-                        </div>
-                    </div> -->
                 </div>
+                <div class="col-lg-3 col-md-3">
+                    <div id="jumboCol1" class="jumbotron jumbotron-fluid" style="background-color: transparent">
+                        <div class="container">
+                            <img class="img-fluid " height="280px" width="280px" src="img/carousel/Potos.tours.jpg" alt="Second slide">
+                            <!-- //height="150px" width="150px" -->
 
-                <div class="col-lg-8 col-md-8">
-                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#myCarousel" data-slide-to="1"></li>
-                            <li data-target="#myCarousel" data-slide-to="2"></li>
-                            <li data-target="#myCarousel" data-slide-to="3"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="first-slide" src="img/carousel/katarachtes.jpg" alt="First slide">
-                                <div class="container">
-                                    <div class="carousel-caption text-left">
-                                        <h1>Maries waterfall.</h1>
-                                        <p>Description of Maries waterfall in Thassos.
-                                        </p>
-                                        <p>
-                                            <a class="btn btn-lg btn-primary" href="#" role="button">Request quote</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="second-slide" src="img/carousel/giola.jpg" alt="Second slide">
-                                <div class="container">
-                                    <div class="carousel-caption">
-                                        <h1>Giola Thassos.</h1>
-                                        <p>Description for giola natural pool.
-                                        </p>
-                                        <p>
-                                            <a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="third-slide" src="img/carousel/aliki.jpg" alt="Third slide">
-                                <div class="container">
-                                    <div class="carousel-caption text-right">
-                                        <h1>Aliki beach.</h1>
-                                        <p>Description for Aliki beach Thassos.
-                                        </p>
-                                        <p>
-                                            <a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="third-slide" src="img/carousel/Potos.tours.jpg" alt="Potos tours the travel agency in Potos Thassos">
-                                <div class="container">
-                                    <div class="carousel-caption text-right">
-                                        <h1>Potos.Tours</h1>
-                                        <p>Potos tours is your vacation partner in Potos.
-                                        </p>
-                                        <p>
-                                            <a class="btn btn-lg btn-primary" href="http://potos.tours" target="_blank" role="button">Visit site</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
+                            <h5 >Potos.Tours</h5>
+                            <p class="">Your travel partner for potos. </p>
+
+                            <a class="btn btn-sm btn-primary" href="http://potos.tours" target="_blank" role="button">Learn more</a>
+
                         </div>
-                        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
                     </div>
+
                 </div>
+                <div class="col-lg-3 col-md-3">
+                    <div id="jumboCol2" class="jumbotron jumbotron-fluid" style="background-color: transparent">
+                        <div class="container">
+                            <img class="img-fluid " height="280px" width="280px" src="img/carousel/motorino.jpg" alt="Second slide">
+                            <!-- //height="150px" width="150px" -->
+
+                            <h5 >Motorino</h5>
+                            <p class="">Rent a bike in Thassos Island </p>
+
+                            <a class="btn btn-sm btn-primary" href="http://thassos-rent-a-bike.com" target="_blank" role="button">Learn more</a>
+
+                        </div>
+                    </div>
+
+                </div>
+                
             </div>
         </div>
 
@@ -382,7 +332,7 @@
     <section id="activities-section" class="py-5">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6" id="activitiesDetails" >
                     <h3>Live Your Passion</h3>
                     <!-- <p>We make all the necessary arrangements. </p> -->
                     <div class="d-flex flex-row">
@@ -437,7 +387,7 @@
                         </div>
                     </div> -->
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6" id="activitiesImage">
                     <img src="img/parasail.jpg" alt="Parasailing in Potos Thassos" class="img-fluid mb-3 rounded-circle">
                 </div>
             </div>
@@ -465,7 +415,7 @@
     <section id="contact-section" class="bg-light text-muted py-5">
         <div class="container">
             <div class="row">
-                <div id="accommodationDetails" class="col-md-4">
+                <div id="contactDetails" class="col-md-4">
                     <h3>Contact </h3>
 
                     <p>
@@ -817,45 +767,44 @@
             duration: 500,
             origin: 'bottom'
         });
-        // sr.reveal('#meetisland1', {
-        //     duration: 1000,
-        //     delay: 400,
-        //     origin: 'left'
-        // });
-        // sr.reveal('#meetisland2', {
-        //     duration: 1000,
-        //     delay: 600,
-        //     origin: 'left'
-        // });
-        // sr.reveal('#meetisland3', {
-        //     duration: 1000,
-        //     delay: 600,
-        //     origin: 'left'
-        // });
-        // sr.reveal('#img1', {
-        //     duration: 1000,
-        //     delay: 1200,
-        //     distance: '300px',
-        //     origin: 'top'
-        // });
-        // sr.reveal('#img2', {
-        //     duration: 1000,
-        //     delay: 1600,
-        //     distance: '300px',
-        //     origin: 'bottom'
-        // });
-        // sr.reveal('#img3', {
-        //     duration: 1000,
-        //     delay: 2000,
-        //     distance: '300px',
-        //     origin: 'top'
-        // });
-        // sr.reveal('#img4', {
-        //     duration: 1000,
-        //     delay: 2400,
-        //     distance: '300px',
-        //     origin: 'bottom'
-        // });
+        sr.reveal('#meetisland1', {
+            duration: 1000,
+            delay: 400,
+            origin: 'left'
+        });
+        sr.reveal('#meetisland2', {
+            duration: 1000,
+            delay: 600,
+            origin: 'left'
+        });
+        sr.reveal('#meetisland4', {
+            duration: 1000,
+            delay: 800,
+            origin: 'left'
+        });
+        sr.reveal('#meetisland5', {
+            duration: 1000,
+            delay: 1000,
+            origin: 'left'
+        });
+        sr.reveal('#meetisland7', {
+            duration: 1000,
+            delay: 1200,
+            origin: 'left'
+        });
+        sr.reveal('#jumboCol1', {
+            duration: 1000,
+            delay: 1200,
+            distance: '300px',
+            origin: 'top'
+        });
+        sr.reveal('#jumboCol2', {
+            duration: 1000,
+            delay: 1600,
+            distance: '300px',
+            origin: 'bottom'
+        });
+
         //Accommodation section
         sr.reveal('#accommodationImage', {
             duration: 3000
@@ -867,6 +816,29 @@
         sr.reveal('#accommodationDetails', {
             duration: 3000,
             delay: 1000
+            //distance: '300px',
+            //opacity:0
+            //origin: 'bottom'
+        });
+         //Activities section
+         sr.reveal('#activitiesImage', {
+            duration: 3000
+            //delay: 2400,
+            //distance: '300px',
+            //opacity:0
+            //origin: 'bottom'
+        });
+        sr.reveal('#activitiesDetails', {
+            duration: 3000,
+            delay: 1000
+            //distance: '300px',
+            //opacity:0
+            //origin: 'bottom'
+        });
+        //Contact section
+        sr.reveal('#contactDetails', {
+            duration: 3000,
+            delay: 500
             //distance: '300px',
             //opacity:0
             //origin: 'bottom'
