Editied Main Image and added second button in accommodation section

--- a/src/index.html
+++ b/src/index.html
@@ -242,6 +242,9 @@
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#fillRequirementsModal">
                             Request a quote
                         </button>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#fillRequirementsModal">
+                            Gallery
+                        </button>
                         <!-- <a href="#" class="btn btn-outline-secondary ">Fill out your requirements form</a> -->
                     </div>
                 </div>
@@ -321,7 +324,7 @@
                     <div class="p-5">
                         <h1 class="display-4">Activities in Potos Thassos</h1>
                         <p class="lead">In Potos you can find all kind of Activities. Clubbing, Boat Trips, Car Rentals, Bike Rentals.</p>
-                        <a href="#" class="btn btn-outline-light">Fill out your requirements form</a>
+                        <!-- <a href="#" class="btn btn-outline-light">Fill out your requirements form</a> -->
                     </div>
                 </div>
             </div>
@@ -365,9 +368,9 @@
                         </div>
                         <div class="p-2 align-self-end">
                             Diving, Parasailing
-                            <button class="btn btn-link btn-sm">
+                            <!-- <button class="btn btn-link btn-sm">
                                 more...
-                            </button>
+                            </button> -->
                         </div>
                     </div>
                     <div class="d-flex flex-row">
