Αλλαγή από Potos.tours σε Angelikascreations στην αρχική σελίδα

--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
         data-image-src="img/soba1300.png">
         <div class="container home-section-padding">
             <h1>
-                Villa Koukoudis holiday studios, rooms and appartments in Potos Thassos
+                Villa Koukoudis holiday studios and appartments in Potos Thassos
             </h1>
 
             <div class="row">
@@ -197,13 +197,13 @@
                 <div class="col-lg-3 col-md-3">
                     <div id="jumboCol1" class="jumbotron jumbotron-fluid" style="background-color: transparent">
                         <div class="container">
-                            <img class="img-fluid " height="280px" width="280px" src="img/carousel/Potos.tours.jpg" alt="Second slide">
+                            <img class="img-fluid " height="280px" width="280px" src="img/carousel/AngelikasCreations 640400.jpg" alt="Second slide">
                             <!-- //height="150px" width="150px" -->
 
-                            <h5>Potos.Tours</h5>
-                            <p class="">Your travel partner for potos. </p>
+                            <h5>Angelikas Creations</h5>
+                            <p class="">Handmade Jewelry </p>
 
-                            <a class="btn btn-sm btn-primary" href="http://potos.tours" target="_blank" role="button">Learn more</a>
+                            <a class="btn btn-sm btn-primary" href="https://angelikascreations.com" target="_blank" role="button">Learn more</a>
 
                         </div>
                     </div>
